UnifyNetSDK/gen_ctypes_file/_1_original/HK_PlaySDK.h

// 根据相对时间获取MP4封装在线定位偏移
PLAYM4_API int __stdcall PlayM4_GetMpOffset(int nPort, int nTime, int* nOffset);
//Hlog写日志开关接口。任一port的开关操作对该进程中所有port都会起作用。目前配置文件路径参数不起作用，作为后续可能的扩展功能预留。
PLAYM4_API BOOL __stdcall PlayM4_SetHLogFlag(int nPort, BOOL bFlag, char* pConfigFilePath);
///<硬解码和渲染能力集探测输出结构体
typedef struct _tagHDECODESUPPORT_
{
    unsigned char  chGPUType;                // GPU类型： 0-无，1-N卡独显，2-A卡独显，3-Intel核显
    unsigned char  bDXVA_D3D9;               // 0-不支持，1-支持
    unsigned char  bCUVID_D3D11;             // 0-不支持，1-支持
    unsigned char  chDXVAH264_Max_Resolution;// DXVA,h264编码支持的最大的分辨率大概值-不是精准值-具体定义见枚举类型
    unsigned char  chDXVAH265_Max_Resolution;// DXVA,h265编码支持的最大的分辨率大概值-不是精准值-具体定义见枚举类型
    unsigned char  chCUVIDH264_Max_Resolution;// CUVID,h264编码支持的最大的分辨率大概值-不是精准值-具体定义见枚举类型
    unsigned char  chCUVIDH265_Max_Resolution;// CUVID,h265编码支持的最大的分辨率大概值-不是精准值-具体定义见枚举类型
    unsigned char  chValidFlag;               ///<有效
    unsigned char  bD3D11VA;                  // 判断是否支持D3D11VA硬解码:0-不支持，1-支持
    unsigned char  chD3D11VAH264_Max_Resolution;// D3D11VA,h264编码支持的最大的分辨率大概值-不是精准值
    unsigned char  chD3D11VAH265_Max_Resolution;// D3D11VA,h265编码支持的最大的分辨率大概值-不是精准值
    unsigned char  nReserved[9];        // 保留字段
}HDECODESUPPORT;///< 硬解码支持信息
typedef struct _tagRENDERSUPPORT_
{
    unsigned char  bDDraw;              ///< 判断是否支持Draw渲染
    unsigned char  bD3D9Surface;        ///< 判断是否支持D3D9表面渲染
    unsigned char  bD3D9Texture;        ///< 判断是否支持D3D9纹理渲染
    unsigned char  bD3D11;              ///< 判断是否支持D3D11渲染
    unsigned char  chValidFlag;         ///< 有效
    unsigned char  nGPUType;            ///< 渲染探测GPU类型  0-无; 1-Intel;2-NVIDIA;3-AMD
    unsigned char  nReserved[10];       ///< 保留字段
}RENDERSUPPORT;///< 渲染支持信息
typedef struct _tagENGINESUPPORT_
{
    HDECODESUPPORT stHDecodeSupport; ///<硬解码能力集
    RENDERSUPPORT  stRenderSupport;  ///<渲染能力集
    unsigned int   chReserved[4];    ///<保留字段
}ENGINESUPPORT;///< 硬解码和渲染支持能力集
typedef struct _tagENGINESUPPORT_EX_
{
    HDECODESUPPORT stHDecodeSupportD3D9[8];
    HDECODESUPPORT stHDecodeSupportD3D11[8];
    RENDERSUPPORT  stRenderSupport[8];
    unsigned char  chD3D9DeviceCount;
    unsigned char  chD3D11DeviceCount;
    unsigned char  chRenderDeviceCount;
    unsigned char  chReserved[13];
}ENGINESUPPORT_EX;///< 硬解码和渲染支持能力集-EX
///<d3d11渲染抓图结构体
typedef struct _tagD3D11_PIC_INFO_
{
    unsigned int   nPicMode;     //抓图模式：0-按照码流实际分辨率抓图(之前抓图模式)；1-按照下面传入的宽高抓图（nPicWidth*nPicHeight为显示窗口宽高时效果最佳）
    unsigned char* pBuf;         //抓图数据buffer
    unsigned int   nBufSize;     //缓存buffer大小-（如果nPicMode为0则为之前的根据获取到的码流分辨率来进行缓存申请；如果nPicMode为1则上层根据设置的分辨率来申请缓存）
    unsigned int*  pPicSize;     //实际图片大小
    unsigned int   nPicWidth;    //设置抓图宽-nPicMode为1时有效，且宽>=32,nPicWidth*nPicHeight<5000w分辨率。
    unsigned int   nPicHeight;   //设置抓图高-nPicMode为1时有效，且高>=32,nPicWidth*nPicHeight<5000w分辨率。
    unsigned char  chReserve[8]; //reserve保留字段
}D3D_PIC_INFO;
/*D3D11图像后处理类型*/
typedef enum tagPLAYM4PostProcType
{
    PLAYM4_PPT_BRIGHTNESS               = 0x1,            ///< 亮度   [-1.0, 1.0]
    PLAYM4_PPT_HUE                      = 0x2,            ///< 色度   [0.0, 1.0]----0.166累加为一种颜色变化及0和1为同一种颜色
    PLAYM4_PPT_SATURATION               = 0x3,            ///< 饱和度 [-1.0, 1.0]
    PLAYM4_PPT_CONTRAST                 = 0x4,            ///< 对比度 [-1.0, 1.0]
    PLAYM4_PPT_SHARPNESS                = 0x5,            ///< 锐度   [ 0.0, 1.0]
}PLAYM4PostProcType;
///< 获取设备硬解码和渲染能力集--getport之后
PLAYM4_API int __stdcall PlayM4_GetEngineSupport(long nPort, ENGINESUPPORT* pstEngineSupport);
///<渲染库d3d11抓图-只支持d3d11渲染时有效，d3d9渲染无效:nType:0-jpeg,1-bmp.
PLAYM4_API int __stdcall PlayM4_GetD3DCapture(long nPort, unsigned int nType, D3D_PIC_INFO* pstPicInfo);
///<d3d11图像后处理-暂只支持d3d11渲染后处理-设置参数
PLAYM4_API int __stdcall PlayM4_SetD3DPostProcess(long nPort, PLAYM4PostProcType nPostType, float fValue);
///<d3d11图像后处理-暂只支持d3d11渲染后处理-获取参数
PLAYM4_API int __stdcall PlayM4_GetD3DPostProcess(long nPort, PLAYM4PostProcType nPostType, float* fValue);
///<设置D3D11渲染时(D3D9渲染时设置实际无效)字符叠加的字体库路径（不设置时采用默认字体库）-play前设置
PLAYM4_API int __stdcall PlayM4_SetConfigFontPath(int nPort, char* pFontPath);
typedef struct _PLAYM4_SESSION_INFO_   //交互信息结构
{
    int            nSessionInfoType;   //交互信息类型，暂时只支持SDP
    int            nSessionInfoLen;    //交互信息长度
    unsigned char* pSessionInfoData;   //交互信息数据
} PLAYM4_SESSION_INFO;
PLAYM4_API BOOL __stdcall PlayM4_OpenStreamAdvanced(LONG nPort, int nProtocolType, PLAYM4_SESSION_INFO* pstSessionInfo, DWORD nBufPoolSize);
// 安装类型
typedef enum tagFECPlaceType
{
    FEC_PLACE_WALL    = 0x1,        // 壁装方式     (法线水平)
    FEC_PLACE_FLOOR   = 0x2,        // 地面安装     (法线向上)
    FEC_PLACE_CEILING = 0x3,        // 顶装方式     (法线向下)

}FECPLACETYPE;
typedef enum tagFECCorrectType
{
    FEC_CORRECT_NULL                    = 0x0000, // 不矫正 - (鱼眼原图)
    FEC_CORRECT_PTZ                     = 0x0100, // PTZ
    FEC_CORRECT_180                     = 0x0200, // 180度矫正 - （对应2P） - 顶装/底装
    FEC_CORRECT_360                     = 0x0300, // 360全景矫正 - （对应1P） - 顶装/底装
    FEC_CORRECT_LAT                     = 0x0400, // 纬度展开 - 壁装
    FEC_CORRECT_SEMISPHERE              = 0x0500, // 鱼眼半球矫正 - (球面矫正)
    FEC_CORRECT_CYLINDER                = 0x0600, // 鱼眼圆柱显示 - 顶装/底装
    FEC_CORRECT_CYLINDER_SPLIT          = 0x0700, // 鱼眼切开的圆柱显示 - 顶装/底装
    FEC_CORRECT_PLANET                  = 0x0800, // 鱼眼小行星
    FEC_CORRECT_ARCSPHERE_HORIZONTAL    = 0x0900, // 鱼眼水平弧面 - 壁装
    FEC_CORRECT_ARCSPHERE_VERTICAL      = 0x0A00, // 鱼眼垂直弧面 - 壁装
}FECCORRECTTYPE;