UnifyNetSDK/haikang/hk_playsdk_wrapper.py


# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 544
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetMpOffset", "cdecl"):
    PlayM4_GetMpOffset = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetMpOffset", "cdecl")
    PlayM4_GetMpOffset.argtypes = [c_int, c_int, POINTER(c_int)]
    PlayM4_GetMpOffset.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 545
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetHLogFlag", "cdecl"):
    PlayM4_SetHLogFlag = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetHLogFlag", "cdecl")
    PlayM4_SetHLogFlag.argtypes = [c_int, BOOL, String]
    PlayM4_SetHLogFlag.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 569
class struct__tagHDECODESUPPORT_(Structure):
    pass

struct__tagHDECODESUPPORT_.__slots__ = [
    'chGPUType',
    'bDXVA_D3D9',
    'bCUVID_D3D11',
    'chDXVAH264_Max_Resolution',
    'chDXVAH265_Max_Resolution',
    'chCUVIDH264_Max_Resolution',
    'chCUVIDH265_Max_Resolution',
    'chValidFlag',
    'bD3D11VA',
    'chD3D11VAH264_Max_Resolution',
    'chD3D11VAH265_Max_Resolution',
    'nReserved',
]
struct__tagHDECODESUPPORT_._fields_ = [
    ('chGPUType', c_ubyte),
    ('bDXVA_D3D9', c_ubyte),
    ('bCUVID_D3D11', c_ubyte),
    ('chDXVAH264_Max_Resolution', c_ubyte),
    ('chDXVAH265_Max_Resolution', c_ubyte),
    ('chCUVIDH264_Max_Resolution', c_ubyte),
    ('chCUVIDH265_Max_Resolution', c_ubyte),
    ('chValidFlag', c_ubyte),
    ('bD3D11VA', c_ubyte),
    ('chD3D11VAH264_Max_Resolution', c_ubyte),
    ('chD3D11VAH265_Max_Resolution', c_ubyte),
    ('nReserved', c_ubyte * int(9)),
]

HDECODESUPPORT = struct__tagHDECODESUPPORT_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 569

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 579
class struct__tagRENDERSUPPORT_(Structure):
    pass

struct__tagRENDERSUPPORT_.__slots__ = [
    'bDDraw',
    'bD3D9Surface',
    'bD3D9Texture',
    'bD3D11',
    'chValidFlag',
    'nGPUType',
    'nReserved',
]
struct__tagRENDERSUPPORT_._fields_ = [
    ('bDDraw', c_ubyte),
    ('bD3D9Surface', c_ubyte),
    ('bD3D9Texture', c_ubyte),
    ('bD3D11', c_ubyte),
    ('chValidFlag', c_ubyte),
    ('nGPUType', c_ubyte),
    ('nReserved', c_ubyte * int(10)),
]

RENDERSUPPORT = struct__tagRENDERSUPPORT_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 579

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 585
class struct__tagENGINESUPPORT_(Structure):
    pass

struct__tagENGINESUPPORT_.__slots__ = [
    'stHDecodeSupport',
    'stRenderSupport',
    'chReserved',
]
struct__tagENGINESUPPORT_._fields_ = [
    ('stHDecodeSupport', HDECODESUPPORT),
    ('stRenderSupport', RENDERSUPPORT),
    ('chReserved', c_uint * int(4)),
]

ENGINESUPPORT = struct__tagENGINESUPPORT_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 585

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 595
class struct__tagENGINESUPPORT_EX_(Structure):
    pass

struct__tagENGINESUPPORT_EX_.__slots__ = [
    'stHDecodeSupportD3D9',
    'stHDecodeSupportD3D11',
    'stRenderSupport',
    'chD3D9DeviceCount',
    'chD3D11DeviceCount',
    'chRenderDeviceCount',
    'chReserved',
]
struct__tagENGINESUPPORT_EX_._fields_ = [
    ('stHDecodeSupportD3D9', HDECODESUPPORT * int(8)),
    ('stHDecodeSupportD3D11', HDECODESUPPORT * int(8)),
    ('stRenderSupport', RENDERSUPPORT * int(8)),
    ('chD3D9DeviceCount', c_ubyte),
    ('chD3D11DeviceCount', c_ubyte),
    ('chRenderDeviceCount', c_ubyte),
    ('chReserved', c_ubyte * int(13)),
]

ENGINESUPPORT_EX = struct__tagENGINESUPPORT_EX_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 595

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 605
class struct__tagD3D11_PIC_INFO_(Structure):
    pass

struct__tagD3D11_PIC_INFO_.__slots__ = [
    'nPicMode',
    'pBuf',
    'nBufSize',
    'pPicSize',
    'nPicWidth',
    'nPicHeight',
    'chReserve',
]
struct__tagD3D11_PIC_INFO_._fields_ = [
    ('nPicMode', c_uint),
    ('pBuf', POINTER(c_ubyte)),
    ('nBufSize', c_uint),
    ('pPicSize', POINTER(c_uint)),
    ('nPicWidth', c_uint),
    ('nPicHeight', c_uint),
    ('chReserve', c_ubyte * int(8)),
]

D3D_PIC_INFO = struct__tagD3D11_PIC_INFO_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 605

enum_tagPLAYM4PostProcType = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4_PPT_BRIGHTNESS = 0x1# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4_PPT_HUE = 0x2# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4_PPT_SATURATION = 0x3# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4_PPT_CONTRAST = 0x4# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4_PPT_SHARPNESS = 0x5# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

PLAYM4PostProcType = enum_tagPLAYM4PostProcType# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 613

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 615
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetEngineSupport", "cdecl"):
    PlayM4_GetEngineSupport = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetEngineSupport", "cdecl")
    PlayM4_GetEngineSupport.argtypes = [c_long, POINTER(ENGINESUPPORT)]
    PlayM4_GetEngineSupport.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 616
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetD3DCapture", "cdecl"):
    PlayM4_GetD3DCapture = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetD3DCapture", "cdecl")
    PlayM4_GetD3DCapture.argtypes = [c_long, c_uint, POINTER(D3D_PIC_INFO)]
    PlayM4_GetD3DCapture.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 617
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetD3DPostProcess", "cdecl"):
    PlayM4_SetD3DPostProcess = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetD3DPostProcess", "cdecl")
    PlayM4_SetD3DPostProcess.argtypes = [c_long, PLAYM4PostProcType, c_float]
    PlayM4_SetD3DPostProcess.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 618
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetD3DPostProcess", "cdecl"):
    PlayM4_GetD3DPostProcess = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetD3DPostProcess", "cdecl")
    PlayM4_GetD3DPostProcess.argtypes = [c_long, PLAYM4PostProcType, POINTER(c_float)]
    PlayM4_GetD3DPostProcess.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 619
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetConfigFontPath", "cdecl"):
    PlayM4_SetConfigFontPath = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetConfigFontPath", "cdecl")
    PlayM4_SetConfigFontPath.argtypes = [c_int, String]
    PlayM4_SetConfigFontPath.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 629
class struct__PLAYM4_SESSION_INFO_(Structure):
    pass

struct__PLAYM4_SESSION_INFO_.__slots__ = [
    'nSessionInfoType',
    'nSessionInfoLen',
    'pSessionInfoData',
]
struct__PLAYM4_SESSION_INFO_._fields_ = [
    ('nSessionInfoType', c_int),
    ('nSessionInfoLen', c_int),
    ('pSessionInfoData', POINTER(c_ubyte)),
]

PLAYM4_SESSION_INFO = struct__PLAYM4_SESSION_INFO_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 629

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 631
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_OpenStreamAdvanced", "cdecl"):
    PlayM4_OpenStreamAdvanced = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_OpenStreamAdvanced", "cdecl")
    PlayM4_OpenStreamAdvanced.argtypes = [LONG, c_int, POINTER(PLAYM4_SESSION_INFO), DWORD]
    PlayM4_OpenStreamAdvanced.restype = BOOL

enum_tagFECPlaceType = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 639

FEC_PLACE_WALL = 0x1# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 639

FEC_PLACE_FLOOR = 0x2# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 639

FEC_PLACE_CEILING = 0x3# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 639

FECPLACETYPE = enum_tagFECPlaceType# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 639

enum_tagFECCorrectType = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_NULL = 0x0000# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_PTZ = 0x0100# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_180 = 0x0200# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_360 = 0x0300# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_LAT = 0x0400# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_SEMISPHERE = 0x0500# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_CYLINDER = 0x0600# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_CYLINDER_SPLIT = 0x0700# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_PLANET = 0x0800# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_ARCSPHERE_HORIZONTAL = 0x0900# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FEC_CORRECT_ARCSPHERE_VERTICAL = 0x0A00# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653

FECCORRECTTYPE = enum_tagFECCorrectType# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 653
